--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,7 +22,8 @@ h1 {
     flex: 1;
 }
 
-header, footer {
+header,
+footer {
     text-align: center;
     padding: 10px 0;
 }
@@ -38,4 +39,13 @@ section {
 
 #contact-email:hover {
     color: #6272a4;
+}
+
+a {
+    color: #9698b0;
+    text-decoration: none
+}
+
+a:hover {
+    color: #6272a4
 }
